ESP32-CamRecorder/fil.txt
"C:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp-x32\\2511/bin/xtensa-esp32-elf-g++" -MMD -c "@C:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/flags/cpp_flags" -w -Os -Werror=return-type -DF_CPU=240000000L -DARDUINO=10607 -DARDUINO_ESP32_DEV -DARDUINO_ARCH_ESP32 "-DARDUINO_BOARD=\"ESP32_DEV\"" "-DARDUINO_VARIANT=\"esp32\"" -DARDUINO_PARTITION_huge_app "-DARDUINO_HOST_OS=\"windows\"" "-DARDUINO_FQBN=\"esp32:esp32:esp32cam:CPUFreq=240,FlashFreq=80,FlashMode=qio,PartitionScheme=huge_app,DebugLevel=none,EraseFlash=none\"" -DESP32=ESP32 -DCORE_DEBUG_LEVEL=0 -DBOARD_HAS_PSRAM -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -DARDUINO_USB_CDC_ON_BOOT=0 "@C:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/flags/defines" "-IC:\\Probatv\\ESP32-CamRecorder" -iprefix "C:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/include/" "@C:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/flags/includes" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/qio_qspi/include" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\cores\\esp32" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\variants\\esp32" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\FS\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\SD_MMC\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\EEPROM\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\WiFi\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Network\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\WebServer\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\HTTPClient\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\NetworkClientSecure\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\ArduinoOTA\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Update\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\ESPmDNS\\src" "-Ic:\\Users\\Евгеньевич\\Documents\\Arduino\\libraries\\ESPping-main\\src" "-IC:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Hash\\src" "@C:\\Users\\Евгеньевич\\AppData\\Local\\arduino\\sketches\\A2C5793AB0DCEF2DBF8ABFF8CE3168F5/build_opt.h" "@C:\\Users\\Евгеньевич\\AppData\\Local\\arduino\\sketches\\A2C5793AB0DCEF2DBF8ABFF8CE3168F5/file_opts" "C:\\Users\\Евгеньевич\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Hash\\src\\SHA1Builder.cpp" -o "C:\\Users\\Евгеньевич\\AppData\\Local\\arduino\\sketches\\A2C5793AB0DCEF2DBF8ABFF8CE3168F5\\libraries\\Hash\\SHA1Builder.cpp.o"
In file included from C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA2Builder.h:21,
                 from C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA2Builder.cpp:19:
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\cores\esp32/HashBuilder.h:55:26: error: 'Stream' has not been declared
   55 |   virtual bool addStream(Stream &stream, const size_t maxLen) = 0;
      |                          ^~~~~~
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA2Builder.h:65:18: error: 'Stream' has not been declared
   65 |   bool addStream(Stream &stream, const size_t maxLen) override;
      |                  ^~~~~~
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA2Builder.cpp:286:6: error: 'bool SHA2Builder::addStream' is not a static data member of 'class SHA2Builder'
  286 | bool SHA2Builder::addStream(Stream &stream, const size_t maxLen) {
      |      ^~~~~~~~~~~
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA2Builder.cpp:286:29: error: 'Stream' was not declared in this scope
  286 | bool SHA2Builder::addStream(Stream &stream, const size_t maxLen) {
      |                             ^~~~~~
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA2Builder.cpp:286:37: error: 'stream' was not declared in this scope; did you mean 'strcat'?
  286 | bool SHA2Builder::addStream(Stream &stream, const size_t maxLen) {
      |                                     ^~~~~~
      |                                     strcat
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA2Builder.cpp:286:45: error: expected primary-expression before 'const'
  286 | bool SHA2Builder::addStream(Stream &stream, const size_t maxLen) {
      |                                             ^~~~~
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA2Builder.cpp:286:64: error: expression list treated as compound expression in initializer [-fpermissive]
  286 | bool SHA2Builder::addStream(Stream &stream, const size_t maxLen) {
      |                                                                ^
In file included from C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA3Builder.h:21,
                 from C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA3Builder.cpp:18:
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\cores\esp32/HashBuilder.h:55:26: error: 'Stream' has not been declared
   55 |   virtual bool addStream(Stream &stream, const size_t maxLen) = 0;
      |                          ^~~~~~
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA3Builder.h:58:18: error: 'Stream' has not been declared
   58 |   bool addStream(Stream &stream, const size_t maxLen) override;
      |                  ^~~~~~
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA3Builder.cpp:187:6: error: 'bool SHA3Builder::addStream' is not a static data member of 'class SHA3Builder'
  187 | bool SHA3Builder::addStream(Stream &stream, const size_t maxLen) {
      |      ^~~~~~~~~~~
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA3Builder.cpp:187:29: error: 'Stream' was not declared in this scope
  187 | bool SHA3Builder::addStream(Stream &stream, const size_t maxLen) {
      |                             ^~~~~~
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA3Builder.cpp:187:37: error: 'stream' was not declared in this scope; did you mean 'strcat'?
  187 | bool SHA3Builder::addStream(Stream &stream, const size_t maxLen) {
      |                                     ^~~~~~
      |                                     strcat
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA3Builder.cpp:187:45: error: expected primary-expression before 'const'
  187 | bool SHA3Builder::addStream(Stream &stream, const size_t maxLen) {
      |                                             ^~~~~
C:\Users\??????????\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash\src\SHA3Builder.cpp:187:64: error: expression list treated as compound expression in initializer [-fpermissive]
  187 | bool SHA3Builder::addStream(Stream &stream, const size_t maxLen) {
      |                                                                ^
Используем библиотеку FS версии 3.3.5 из папки: